@@ -1,2 +1,2 @@
 1
-nagy/C    [MN]
+nagy/C	[MN]
